# rabbitmq-kafka

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  docker-deploy.ps1  docker-deploy.sh
config/: default.toml
src/: config.rs  error.rs  kafka.rs  main.rs  processor.rs  rabbitmq.rs
