[package]
name = "rabbitmq-kafka"
version = "0.1.0"
edition = "2024"
description = "A bridge application that consumes messages from RabbitMQ and forwards them to Kafka"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
lapin = "2.1"
rdkafka = { version = "0.29", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
env_logger = "0.10"
log = "0.4"
thiserror = "1.0"
dotenv = "0.15"
futures-util = "0.3.31"
chrono = "0.4.40"
