[package]
name = "rabbitmq-kafka"
version = "0.1.0"
edition = "2024"
description = "A bridge application that consumes messages from RabbitMQ and forwards them to Kafka"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }
lapin = "2.5.3"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
config = "0.15.11"
env_logger = "0.11.8"
log = "0.4.27"
thiserror = "2.0.12"
dotenv = "0.15.0"
futures-util = "0.3.31"
chrono = "0.4.40"
uuid = { version = "1.16.0", features = ["v4"] }
